mostly functional firebase auth module
